--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,23 @@ uuid = "ae7ec7fe-6a6e-422b-b650-b7e6d59ce0d8"
 authors = ["Tatsuya Miki <tatsuya.miki.1201@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
+Dates = "1.11.0"
+EzXML = "1.2.0"
+FFTW = "1.8.0"
+LinearAlgebra = "1.11.0"
+OMEinsum = "0.8.4"
+Printf = "1.11.0"
+Revise = "3.6.4"
 julia = "1.6.7"
 
 [extras]
