--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 Dates = "1.11.0"
@@ -20,6 +21,7 @@ LinearAlgebra = "1.11.0"
 OMEinsum = "0.8.4"
 Printf = "1.11.0"
 Revise = "3.6.4"
+SpecialFunctions = "2.5.0"
 julia = "1.6.7"
 
 [extras]
