--- a/Project.toml
+++ b/Project.toml
@@ -17,12 +17,12 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Dates = "1.11.0"
 EzXML = "1.2.0"
 FFTW = "1.8.0"
-LinearAlgebra = "1.11.0"
+LinearAlgebra = "1.6.7, 1.11.0"
 OMEinsum = "0.8.4"
 Printf = "1.11.0"
 Revise = "3.6.4"
 SpecialFunctions = "2.5.0"
-julia = "1.6.7"
+julia = "1.6.7, 1.11.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
