--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,11 +23,15 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.10'
-          - '1.11'
+          - 'lts'
+          - '1'
+          - 'nightly'
+          #- '1.10'
+          #- '1.11'
           #- '1.6'
         os:
           - ubuntu-latest
+          - macOS-latest
         arch:
           - x64
     steps:
