Modified: input files

--- a/examples/BaTiO3/Wannier_matrix/BaTiO3.pw2wan.in
+++ b/examples/BaTiO3/Wannier_matrix/BaTiO3.pw2wan.in
@@ -1,5 +1,5 @@
 &inputpp
-    outdir='./tmp/nscf'
+    outdir='./tmp/scf'
     prefix='BaTiO3',
     seedname = 'BaTiO3'
     spin_component = 'none'
