Update: examples, matrix

--- a/examples/Te/Wannier_matrix/Te.scf.in
+++ b/examples/Te/Wannier_matrix/Te.scf.in
@@ -2,7 +2,7 @@
    calculation = 'scf'
    prefix = 'Te'
    pseudo_dir = './PP/'
-   outdir='./tmp/scf/'
+   outdir='./tmp'
    wf_collect=.true.
    tstress = .true.
    tprnfor = .true.
