--- a/examples/BaTiO3/Wannier_matrix/BaTiO3.scf.in
+++ b/examples/BaTiO3/Wannier_matrix/BaTiO3.scf.in
@@ -5,7 +5,7 @@
    tstress = .true.,
    tprnfor = .true.,
    pseudo_dir = './PP/'
-   outdir='./tmp/scf'
+   outdir='./tmp'
 /
 &system
   ibrav= 6, 
