--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "1.0.0-DEV"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -15,6 +16,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 Dates = "1.6, 1.11.0"
+DocumenterTools = "0.1.20"
 EzXML = "1.2.0"
 FFTW = "1.8.0"
 LinearAlgebra = "1.6, 1.11.0"
