optimize OMEinsum contraction

--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ DocumenterTools = "0.1.20"
 EzXML = "1.2.0"
 FFTW = "1.8.0"
 LinearAlgebra = "1.6, 1.11.0"
-OMEinsum = "0.8, 0.8.4"
+OMEinsum = "0.9"
 Printf = "1.6, 1.11.0"
 Revise = "3.6.4"
 SpecialFunctions = "2.5.0"
