--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "DiracBilinears"
 uuid = "ae7ec7fe-6a6e-422b-b650-b7e6d59ce0d8"
 authors = ["Tatsuya Miki <tatsuya.miki.1201@gmail.com> and contributors"]
-version = "0.1.11"
+version = "0.1.12"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -24,7 +24,7 @@ OMEinsum = "0.9"
 Printf = "1.6, 1.10"
 Revise = "3.6.4"
 SpecialFunctions = "2.5.0"
-julia = "1.6, 1.10, 1"
+julia = "1.6, 1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
